vendor/bifrost/tls/bindings/ssl.odin


	// SSL_get0_selected_credential returns the credential in use in the current
	// handshake on |ssl|. If there is current handshake on |ssl| or if the
	// handshake has not progressed to this point, it returns NULL.
	//
	// This function is intended for use with |SSL_CREDENTIAL_get_ex_data|. It may
	// be called from handshake callbacks, such as those in
	// |SSL_PRIVATE_KEY_METHOD|, to trigger credential-specific behavior.
	//
	// In applications that use the older APIs, such as |SSL_use_certificate|, this
	// function may return an internal |SSL_CREDENTIAL| object. This internal object
	// will have no ex_data installed. To avoid this, it is recommended that callers
	// moving to |SSL_CREDENTIAL| use the new APIs consistently.
	SSL_get0_selected_credential :: proc(ssl: ^SSL) -> ^SSL_CREDENTIAL ---

	// SSL_CTX_use_certificate sets |ctx|'s leaf certificate to |x509|. It returns
	// one on success and zero on failure. If |ctx| has a private key which is
	// inconsistent with |x509|, the private key is silently dropped.
	SSL_CTX_use_certificate :: proc(ctx: ^SSL_CTX, x509: ^X509) -> i32 ---

	// SSL_use_certificate sets |ssl|'s leaf certificate to |x509|. It returns one
	// on success and zero on failure. If |ssl| has a private key which is
	// inconsistent with |x509|, the private key is silently dropped.
	SSL_use_certificate :: proc(ssl: ^SSL, x509: ^X509) -> i32 ---

	// SSL_CTX_use_PrivateKey sets |ctx|'s private key to |pkey|. It returns one on
	// success and zero on failure. If |ctx| had a private key or
	// |SSL_PRIVATE_KEY_METHOD| previously configured, it is replaced.
	SSL_CTX_use_PrivateKey :: proc(ctx: ^SSL_CTX, pkey: ^EVP_PKEY) -> i32 ---

	// SSL_use_PrivateKey sets |ssl|'s private key to |pkey|. It returns one on
	// success and zero on failure. If |ssl| had a private key or
	// |SSL_PRIVATE_KEY_METHOD| previously configured, it is replaced.
	SSL_use_PrivateKey :: proc(ssl: ^SSL, pkey: ^EVP_PKEY) -> i32 ---

	// SSL_CTX_set_cert_cb sets a callback that is called to select a certificate.
	// The callback returns one on success, zero on internal error, and a negative
	// number on failure or to pause the handshake. If the handshake is paused,
	// |SSL_get_error| will return |SSL_ERROR_WANT_X509_LOOKUP|.
	//
	// On the client, the callback may call |SSL_get0_certificate_types| and
	// |SSL_get_client_CA_list| for information on the server's certificate
	// request.
	//
	// On the server, the callback will be called after extensions have been
	// processed, but before the resumption decision has been made. This differs
	// from OpenSSL which handles resumption before selecting the certificate.
	SSL_CTX_set_cert_cb :: proc(ctx: ^SSL_CTX, cb: proc "c" (ssl: ^SSL, arg: rawptr) -> i32, arg: rawptr) ---

	// SSL_set_cert_cb sets a callback that is called to select a certificate. The
	// callback returns one on success, zero on internal error, and a negative
	// number on failure or to pause the handshake. If the handshake is paused,
	// |SSL_get_error| will return |SSL_ERROR_WANT_X509_LOOKUP|.
	//
	// On the client, the callback may call |SSL_get0_certificate_types| and
	// |SSL_get_client_CA_list| for information on the server's certificate
	// request.
	//
	// On the server, the callback will be called after extensions have been
	// processed, but before the resumption decision has been made. This differs
	// from OpenSSL which handles resumption before selecting the certificate.
	SSL_set_cert_cb :: proc(ssl: ^SSL, cb: proc "c" (ssl: ^SSL, arg: rawptr) -> i32, arg: rawptr) ---

	// SSL_get0_peer_verify_algorithms sets |*out_sigalgs| to an array containing
	// the signature algorithms the peer is able to verify. It returns the length of
	// the array. Note these values are only sent starting TLS 1.2 and only
	// mandatory starting TLS 1.3. If not sent, the empty array is returned. For the
	// historical client certificate types list, see |SSL_get0_certificate_types|.
	//
	// The behavior of this function is undefined except during the callbacks set by
	// by |SSL_CTX_set_cert_cb| and |SSL_CTX_set_client_cert_cb| or when the
	// handshake is paused because of them.
	SSL_get0_peer_verify_algorithms :: proc(ssl: ^SSL, out_sigalgs: ^^u16) -> c.size_t ---

	// SSL_get0_peer_delegation_algorithms sets |*out_sigalgs| to an array
	// containing the signature algorithms the peer is willing to use with delegated
	// credentials.  It returns the length of the array. If not sent, the empty
	// array is returned.
	//
	// The behavior of this function is undefined except during the callbacks set by
	// by |SSL_CTX_set_cert_cb| and |SSL_CTX_set_client_cert_cb| or when the
	// handshake is paused because of them.
	SSL_get0_peer_delegation_algorithms :: proc(ssl: ^SSL, out_sigalgs: ^^u16) -> c.size_t ---

	// SSL_CTX_get0_certificate returns |ctx|'s leaf certificate.
	SSL_CTX_get0_certificate :: proc(ctx: ^SSL_CTX) -> ^X509 ---

	// SSL_get_certificate returns |ssl|'s leaf certificate.
	SSL_get_certificate :: proc(ssl: ^SSL) -> ^X509 ---

	// SSL_CTX_get0_privatekey returns |ctx|'s private key.
	SSL_CTX_get0_privatekey :: proc(ctx: ^SSL_CTX) -> ^EVP_PKEY ---

	// SSL_get_privatekey returns |ssl|'s private key.
	SSL_get_privatekey :: proc(ssl: ^SSL) -> ^EVP_PKEY ---

	// SSL_CTX_set_signed_cert_timestamp_list sets the list of signed certificate
	// timestamps that is sent to clients that request it. The |list| argument must
	// contain one or more SCT structures serialised as a SignedCertificateTimestamp
	// List (see https://tools.ietf.org/html/rfc6962#section-3.3) – i.e. each SCT
	// is prefixed by a big-endian, uint16 length and the concatenation of one or
	// more such prefixed SCTs are themselves also prefixed by a uint16 length. It
	// returns one on success and zero on error. The caller retains ownership of
	// |list|.
	SSL_CTX_set_signed_cert_timestamp_list :: proc(ctx: ^SSL_CTX, list: ^u8, list_len: c.size_t) -> i32 ---

	// SSL_set_signed_cert_timestamp_list sets the list of signed certificate
	// timestamps that is sent to clients that request is. The same format as the
	// one used for |SSL_CTX_set_signed_cert_timestamp_list| applies. The caller
	// retains ownership of |list|.
	SSL_set_signed_cert_timestamp_list :: proc(ctx: ^SSL, list: ^u8, list_len: c.size_t) -> i32 ---

	// SSL_CTX_set_ocsp_response sets the OCSP response that is sent to clients
	// which request it. It returns one on success and zero on error. The caller
	// retains ownership of |response|.
	SSL_CTX_set_ocsp_response :: proc(ctx: ^SSL_CTX, response: ^u8, response_len: c.size_t) -> i32 ---

	// SSL_set_ocsp_response sets the OCSP response that is sent to clients which
	// request it. It returns one on success and zero on error. The caller retains
	// ownership of |response|.
	SSL_set_ocsp_response :: proc(ssl: ^SSL, response: ^u8, response_len: c.size_t) -> i32 ---
}

// SSL_SIGN_* are signature algorithm values as defined in TLS 1.3.
SSL_SIGN_RSA_PKCS1_SHA1         :: 0x0201
SSL_SIGN_RSA_PKCS1_SHA256       :: 0x0401
SSL_SIGN_RSA_PKCS1_SHA384       :: 0x0501
SSL_SIGN_RSA_PKCS1_SHA512       :: 0x0601
SSL_SIGN_ECDSA_SHA1             :: 0x0203
SSL_SIGN_ECDSA_SECP256R1_SHA256 :: 0x0403
SSL_SIGN_ECDSA_SECP384R1_SHA384 :: 0x0503
SSL_SIGN_ECDSA_SECP521R1_SHA512 :: 0x0603
SSL_SIGN_RSA_PSS_RSAE_SHA256    :: 0x0804
SSL_SIGN_RSA_PSS_RSAE_SHA384    :: 0x0805
SSL_SIGN_RSA_PSS_RSAE_SHA512    :: 0x0806
SSL_SIGN_ED25519                :: 0x0807

// SSL_SIGN_RSA_PKCS1_SHA256_LEGACY is a backport of RSASSA-PKCS1-v1_5 with
// SHA-256 to TLS 1.3. It is disabled by default and only defined for client
// certificates.
SSL_SIGN_RSA_PKCS1_SHA256_LEGACY :: 0x0420

// SSL_SIGN_RSA_PKCS1_MD5_SHA1 is an internal signature algorithm used to
// specify raw RSASSA-PKCS1-v1_5 with an MD5/SHA-1 concatenation, as used in TLS
// before TLS 1.2.
SSL_SIGN_RSA_PKCS1_MD5_SHA1 :: 0xff01

@(default_calling_convention="c")
foreign lib {
	// SSL_get_signature_algorithm_name returns a human-readable name for |sigalg|,
	// or NULL if unknown. If |include_curve| is one, the curve for ECDSA algorithms
	// is included as in TLS 1.3. Otherwise, it is excluded as in TLS 1.2.
	SSL_get_signature_algorithm_name :: proc(sigalg: u16, include_curve: i32) -> cstring ---

	// SSL_get_all_signature_algorithm_names outputs a list of possible strings
	// |SSL_get_signature_algorithm_name| may return in this version of BoringSSL.
	// It writes at most |max_out| entries to |out| and returns the total number it
	// would have written, if |max_out| had been large enough. |max_out| may be
	// initially set to zero to size the output.
	//
	// This function is only intended to help initialize tables in callers that want
	// possible strings pre-declared. This list would not be suitable to set a list
	// of supported features. It is in no particular order, and may contain
	// placeholder, experimental, or deprecated values that do not apply to every
	// caller. Future versions of BoringSSL may also return strings not in this
	// list, so this does not apply if, say, sending strings across services.
	SSL_get_all_signature_algorithm_names :: proc(out: ^cstring, max_out: c.size_t) -> c.size_t ---

	// SSL_get_signature_algorithm_key_type returns the key type associated with
	// |sigalg| as an |EVP_PKEY_*| constant or |EVP_PKEY_NONE| if unknown.
	SSL_get_signature_algorithm_key_type :: proc(sigalg: u16) -> i32 ---

	// SSL_get_signature_algorithm_digest returns the digest function associated
	// with |sigalg| or |NULL| if |sigalg| has no prehash (Ed25519) or is unknown.
	SSL_get_signature_algorithm_digest :: proc(sigalg: u16) -> ^EVP_MD ---

	// SSL_is_signature_algorithm_rsa_pss returns one if |sigalg| is an RSA-PSS
	// signature algorithm and zero otherwise.
	SSL_is_signature_algorithm_rsa_pss :: proc(sigalg: u16) -> i32 ---

	// SSL_CTX_set_signing_algorithm_prefs configures |ctx| to use |prefs| as the
	// preference list when signing with |ctx|'s private key in TLS 1.2 and up. It
	// returns one on success and zero on error. |prefs| should not include the
	// internal-only TLS 1.0 value |SSL_SIGN_RSA_PKCS1_MD5_SHA1|.
	//
	// This setting is not used in TLS 1.0 and 1.1. Those protocols always sign a
	// hardcoded algorithm (an MD5/SHA-1 concatenation for RSA, and SHA-1 for
	// ECDSA). BoringSSL will use those algorithms if and only if those versions are
	// used. To disable them, set the minimum version to TLS 1.2 (default) or
	// higher.
	SSL_CTX_set_signing_algorithm_prefs :: proc(ctx: ^SSL_CTX, prefs: ^u16, num_prefs: c.size_t) -> i32 ---

	// SSL_set_signing_algorithm_prefs configures |ssl| to use |prefs| as the
	// preference list when signing with |ssl|'s private key in TLS 1.2 and up. It
	// returns one on success and zero on error. |prefs| should not include the
	// internal-only TLS 1.0 value |SSL_SIGN_RSA_PKCS1_MD5_SHA1|.
	//
	// This setting is not used in TLS 1.0 and 1.1. Those protocols always sign a
	// hardcoded algorithm (an MD5/SHA-1 concatenation for RSA, and SHA-1 for
	// ECDSA). BoringSSL will use those algorithms if and only if those versions are
	// used. To disable them, set the minimum version to TLS 1.2 (default) or
	// higher.
	SSL_set_signing_algorithm_prefs :: proc(ssl: ^SSL, prefs: ^u16, num_prefs: c.size_t) -> i32 ---

	// SSL_CTX_set_chain_and_key sets the certificate chain and private key for a
	// TLS client or server. References to the given |CRYPTO_BUFFER| and |EVP_PKEY|
	// objects are added as needed. Exactly one of |privkey| or |privkey_method|
	// may be non-NULL. Returns one on success and zero on error.
	SSL_CTX_set_chain_and_key :: proc(ctx: ^SSL_CTX, certs: ^^CRYPTO_BUFFER, num_certs: c.size_t, privkey: ^EVP_PKEY, privkey_method: ^SSL_PRIVATE_KEY_METHOD) -> i32 ---
